# MAX

./: .gitignore  Latest Roadmap - MAX.md  Phase 1 Core Infrastructure.md  Phase 2 Expanding Capabilities.md  Phase 3 Advanced Reasoning.md  Phase 4 Full System Scalability.md  Sys_doc_MAXs.md  Technical doc_arch_bottlenecks_debt.txt  autogen-style-agent.py  component_guide.md  issue5_resolutions.md  mypy.ini  pyproject.toml  pytest.ini  setup.py  todo.txt
MAX/KPU/: kpu.py
python/: .gitignore  pyproject.toml  setup.py
python/src/MAX/: orchestrator.py
python/src/MAX/agents/: __init__.py  agent.py  anthropic_agent.py  chain_agent.py  ollama_agent.py  options.py  task_expert.py
python/src/MAX/classifiers/: anthropic_classifier.py
python/src/MAX/config/: database_config.py  model_config.py
python/src/MAX/llms/: anthropic.py  base.py  ollama.py
python/src/MAX/managers/: state_manager.py
python/src/MAX/retrievers/: __init__.py  kb_retriever.py  retriever.py
python/src/MAX/storage/: chat_storage.py  chromaDB.py  data_hub_cache.py  in_memory_chat_storage.py  mongoDB.py
python/src/MAX/tools/: semantic_matcher.py
python/src/MAX/utils/: __init__.py  helpers.py  interfaces.py  options.py
python/src/multi_agent_orchestrator/: orchestrator.py
python/src/multi_agent_orchestrator/agents/: task_manager.py  twitter.py
python/src/tests/: conftest.py  pytest.ini  test_fetcher_simulation.py  test_intent_recognition.py  test_orchestrator.py  test_state_manager.py  test_storage_and_state.py
python/src/tests/KPU/: test_kpu.py
python/src/tests/agents/: test_intent.py  (+1 more)
(+250 files in other folders)
