[build-system]
   requires = ["setuptools>=42", "wheel"]
   build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
     asyncio_mode = "auto"
     timeout = 300
     pythonpath = ["src"]
     testpaths = ["src/tests"]
     # Add these recommended settings:
     filterwarnings = [
         "ignore::DeprecationWarning",
         "ignore::UserWarning",
     ]
     log_cli = true
     log_cli_level = "INFO"
     python_files = ["test_*.py"]
     addopts = "-v --tb=short"
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true